frontend/web/css/customstyle.css
/* FOr Pop up Success Message */
.text-success {
    color: #11d814;
}

/* FOr Pop up Error Message */
.text-error {
    color: #f50505;
}

img.selected {
    border: 1px solid #ea0b44;
}

.mainpropic {
    min-height: 200px;
}

.profile-edit .minor-control a.active .badge {
    background: #43a44c;
}

/* COVER PHOTO START */
#timelineBackground {
    max-height: 240px !important;

}

.cover-pic {
    /*height: 315px;*/
    max-height: 240px !important;
    position: relative;

    overflow: hidden;
    background-color: #ffffff
}

.bgImagecover {
    width: 100%;
}

.headerimage {
    cursor: s-resize;
    position: relative;

    overflow: hidden;
    background-color: #ffffff;
    width: 100% !important;
}

.wallbutton:hover {
    text-decoration: none;
}

.blackButton {
    background-color: #666666;
    border-color: #333333;
}

.bgSave, .bgSaveRP, .bgSaveFP {
    clear: both;
    float: right;
    position: absolute;
    /*margin-top: 267px;*/
    /*margin-left: 760px;*/
    z-index: 4000;
    right: 10px;
    top: 10px;
}

.bgCancel {
    clear: both;
    float: right;
    position: absolute;
    /*margin-top: 267px;*/
    /*margin-left: 760px;*/
    z-index: 4000;
    right: 10px;
    top: 50px;
}

.wallbutton {
    font-weight: bold;
    padding: 7px 9px;
    background-color: #ff517d;
    color: #fff !important;
    font-size: 12px;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    cursor: pointer;
    text-decoration: none;
    /*border-width: 1px;*/
    border-style: solid;
    border-color: #fff;
    white-space: nowrap;

    display: -moz-inline-stack;

    -moz-border-radius: 3px;
    -ms-border-radius: 3px;
    -o-border-radius: 3px;
    border-radius: 3px;

}

.radio_step4 {
    width: 100%;
}

.radio_step4 label {
    margin-bottom: 10px;
}
/* COVER PHOTO END*/

.tag_delete1 {
    cursor: pointer;
}

.send_email {
    cursor: pointer !important;
}

/* Notification Start */

.kp_loader_section {
    bottom: 35px;
    right: 0;
    min-width: 20%;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 20px;
    border-top-right-radius: 20px;
    border-top-left-radius: 0;
    background: rgb(255, 187, 0);

    z-index: 1000;
    position: fixed;
    color: #fff;
    padding: 10px;
    text-align: center;

}

.kp_notify {
    z-index: 9999;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    padding: 10px;
    color: #fff;
    display: none;
}

.kp_notification {
    width: 90%;
    text-align: center;
    /*border-top-right-radius:7px;
    border-top-left-radius:7px;*/
}

.kp_notification_close {
    z-index: 1001;
    position: fixed;
    top: 0;
    right: 0;
    padding: 10px;
    cursor: pointer;
}

.kp_notify.red {
    background: #ff0000;
}

.kp_notify.yellow {
    background: rgb(255, 187, 0);
}

.kp_notify.green {
    background: rgb(46, 204, 113);
}

/* Notification End */

/* Notify Message Start */
.notice {
    position: relative;
    margin: 1em;
    background: #F9F9F9;
    padding: 1em 1em 1em 2em;
    border-left: 4px solid #DDD;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

.notice:before {
    position: absolute;
    top: 50%;
    margin-top: -17px;
    left: -17px;
    background-color: #DDD;
    color: #FFF;
    width: 30px;
    height: 30px;
    border-radius: 100%;
    text-align: center;
    line-height: 30px;
    font-weight: bold;
    font-family: Georgia;
    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
}

.kp_info {
    border-color: #0074D9;
}

.kp_info:before {
    content: "i";
    background-color: #0074D9;
}

.kp_success {
    border-color: #2ECC40;
}

.kp_success:before {
    content: "√";
    background-color: #2ECC40;
}

.kp_warning {
    border-color: #FFDC00;
}

.kp_warning:before {
    content: "!";
    background-color: #FFDC00;
}

.kp_error {
    border-color: #FF4136;
}

.kp_error:before {
    content: "X";
    background-color: #FF4136;
}

/* Notify Message End */

.pink {
    color: #ff517d;
}

.tab-content {
    min-height: 250px;
}

.user_tag_delete {
    cursor: pointer;
}

.nice-select {
    padding-left: 0px;
    padding-right: 0px;
}

.pager-icon .badge1 {
    background: gray;
}

.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
    background: #e00b41;
    border-color: #e00b41;
}

.btn-primary.disabled, .btn-primary.disabled.active, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled], .btn-primary[disabled].active, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary.active, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary:hover {
    background-color: #ee1845;
    border-color: #ee1845;
}

.resetid {
    font-size: 18px;
}

.resetsucess {
    font-size: 16px;
}

.resethelp {
    font-size: 14px;
}

/* Validation Error - Success - Label Start */
.has-error .form-control {
    border-color: #cf0d0d !important;
}

.has-success .form-control {
    border-color: #19b01c !important;
}

.has-error .checkbox, .has-error .checkbox-inline, .has-error .control-label, .has-error .help-block, .has-error .radio, .has-error .radio-inline, .has-error.checkbox label, .has-error.checkbox-inline label, .has-error.radio label, .has-error.radio-inline label {
    border-color: #cf0d0d !important;
}

/* Validation Error - Success - Label End */

.adbtn {
    width: 80% !important;
}

#login-form .has-error .form-control {
    border: 1px solid #c4c4c4 !important;
}

#login-form .has-success .form-control {
    border: 1px solid #c4c4c4 !important;
}

